refactor : 피드백 내용 수정해서 반영